--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
-  "homepage": "https://code-mars.github.io/Portfolio",
+  "homepage": "https://Euphoric-Coder.github.io/Portfolio",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.3",
